--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,13 @@
 <h1> Tasks List </h1>
 <% @tasks.each do |task| %>
   <h2>
-    Task <%= task[:task] %>
+    <a href= "/tasks/<%=task.id %>">
+        <%= task[:name] %>
   </h2>
   <p>
     <%= task[:name] %>: <%= task[:description] %>
   </p>
-  <p> 
+  <p>
     DUE DATE: <%= task[:completion_date] %>
   </p>
 <% end %>
