--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,12 +1,11 @@
-
-  <h1> <%= @task[:name] %></h1>
+<% if @task.nil? %>
+  <h1><%= "404: NOT FOUND" %></h1>
+<% else %>
+  <h1> <%= @task.name %></h1>
   <p>
-    ID:  <%= @id %>
+    Due Date: <%= @task.completion_date%>
   </p>
   <p>
-    Due Date: <%= @task[:completion_date]%>
+  Description: <%= @task.description %>
   </p>
-  <p>
-  Description: <%= @task[:description] %>
-  </p>
-<%# end %>
+<% end %>
