added edit, delete, mark as complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <li>
             <%= link_to "Task List", "/tasks" %>
           </li>
+          <li>
+             <%= link_to "Add Task", "/tasks/new" %>
+           </li>
 
     <%= yield %>
   </body>
