--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,28 +1,32 @@
 <h1> Tasks List </h1>
-<% @tasks.each do |task| %>
-if complete
-<h2 class="class"> has class
-else not complete
-(another container here without class)
-h2 doesnt have class
-  <h2>
-end
-    <a href= "/tasks/<%=task.id %>">
-        <%= task[:name] %>
-      </a>
-  </h2>
-  <ul>
-    <li>Description: <%= task[:description] %></li>
-    <li>DUE DATE: <%= task[:completion_date] %></li>
-    <li> Status: <%= task[:status]%></li>
+ <div class="wrapper">
+  <% @tasks.each do |task| %>
+    <container <% if task[:status].class == String%>
+                <=% class = "complete"%>
+                <%else task[:status].class == nil%>
+                <=% class = "pending"%>
+                <%end%>
 
-    <li><% if task[:status].class == String%>
-          <%= link_to "Mark as Incomplete", task_status_path(task.id), method: :patch, class: "complete"%>
-        <% else task[:status].class == nil%>
-          <%= link_to "Mark as Complete", task_status_path(task.id), method: :patch %>
-        <%end%>
-      </li>
-    <li><%= link_to "Edit", edit_task_path(task.id)%></li>
-    <li><%= link_to "Delete", delete_task_path(task.id)%></li>
-  </ul>
-<% end %>
+      <h2>
+      <a href= "/tasks/<%=task.id %>">
+          <%= task[:name] %>
+        </a>
+      </h2>
+      <ul>
+        <li>Description: <%= task[:description] %></li>
+        <li>DUE DATE: <%= task[:completion_date] %></li>
+        <li> Status: <%= task[:status]%></li>
+      </ul>
+      <br>
+      <ul class = "options">
+        <li><% if task[:status].class == String%>
+              <%= link_to "Mark as Incomplete", task_status_path(task.id), method: :patch, class: "complete"%>
+            <% else task[:status].class == nil%>
+              <%= link_to "Mark as Complete", task_status_path(task.id), method: :patch %>
+            <%end%>
+          </li>
+        <li><%= link_to "Edit", edit_task_path(task.id)%></li>
+        <li><%= link_to "Delete", task_path(task.id)%></li>
+      </ul>
+        </container>
+      <% end %>
