--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header>
       <h1> Task List</h1>
       <nav>
-        <ul>
+        <ul class = "menu">
           <li>
             <%= link_to "Home", "/", id: "home-link" %>
             <!-- <a href="/"> Home</a> -->
