delete from index

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -26,7 +26,7 @@
             <%end%>
           </li>
         <li><%= link_to "Edit", edit_task_path(task.id)%></li>
-        <li><%= link_to "Delete", task_path(task.id)%></li>
+        <li><%= link_to "Delete #{task.name}?", task_path(task.id), method: :delete, data: {confirm:"Are you sure you want to delete?"} %></li>
       </ul>
         </container>
       <% end %>
