--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
           <li>
              <%= link_to "Add Task", "/tasks/new" %>
            </li>
+         </ul>
+       </nav>
 
     <%= yield %>
   </body>
