--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,5 @@
-<h1> Tasks List </h1>
+<h1> To Do</h1>
+<h1 class = "done"> Done <h1>
  <div class="wrapper">
   <% @tasks.each do |task| %>
     <container <% if task[:status].class == String%>
