--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,3 @@
 <%= render partial: "form",
-  locals: { action_name: 'Add a book',
+  locals: { action_name: 'Add a task',
             button_title: 'Submit' } %>
